--- a/styles/main.scss
+++ b/styles/main.scss
@@ -106,10 +106,12 @@ body {
     color: #1e3932;
     font-family: SoDoSans,Helvetica Neue,Helvetica,Arial,sans-serif;
     display: flex;
+    margin-bottom: 30px;
 }
 
 .banner-ppal-lemon {
    background-color: #9bf5b4; 
+   margin-bottom: 65px;
 }
 
 .banner-ppal--pink {
@@ -139,9 +141,6 @@ body {
 .banner-txt--space {
     font-size: 24px;
     padding: 0px 40px;
-
-
-
 }
 
 .banner-title-secundario {
@@ -165,6 +164,67 @@ body {
     height: 625px;
 }
 
+.information {
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.8;
+    font-family: SoDoSans,Helvetica Neue,Helvetica,Arial,sans-serif;
+    margin: 0 150px;
+    padding: 0 260px;
+}
+
+.information-txt {
+    margin: 0;
+}
+
+.information-txt--space {
+    margin-top: 1.5em;
+    margin-bottom: 2em;
+}
+
+.information-txt-link {
+    color: #000;
+    &:hover {
+    text-decoration: none; 
+    }  
+}
+
+footer {
+    box-shadow: 0 -1px 3px rgb(0 0 0 / 10%), 0 -2px 2px rgb(0 0 0 / 6%), 0 0 2px rgb(0 0 0 / 7%);
+    display: flex;
+    justify-content: space-around;
+    box-shadow: 0 -1px 3px rgb(0 0 0 / 10%), 0 -2px 2px rgb(0 0 0 / 6%), 0 0 2px rgb(0 0 0 / 7%);
+
+}
+
+.footer-column {
+ padding: 0;
+}
+
+.footer-column-title {
+    color: #33433d;;
+    font-family: SoDoSans,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-size: 1.2rem;
+    font-weight: 400;
+    padding: 8px;
+    margin-top: 0;  
+}
+
+.footer-column-items {
+    list-style: none;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+.footer-column-link {
+    text-decoration: none;
+    color: rgba(0,0,0,.58);
+    font-family: SoDoSans,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-weight: 400;
+    &:hover {
+        color: rgba(0,0,0,.87);
+    }
+}
 
 
 
